added SEO meta tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
+  <!-- Primary Meta Tags -->
+  <title>Wes Long for Salt Lake County Council</title>
+  <meta name="title" content="Wes Long for Salt Lake County Council">
+  <meta name="description" content="Wes believes that we are all the government, and as such, we are better off when we participate and keep our community affairs accessible and honest.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://wes4saltlake.com/">
+  <meta property="og:title" content="Wes Long for Salt Lake County Council">
+  <meta property="og:description" content="Wes believes that we are all the government, and as such, we are better off when we participate and keep our community affairs accessible and honest.">
+  <meta property="og:image" content="https://wes4saltlake.com/assets/logo.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://wes4saltlake.com/">
+  <meta property="twitter:title" content="Wes Long for Salt Lake County Council">
+  <meta property="twitter:description" content="Wes believes that we are all the government, and as such, we are better off when we participate and keep our community affairs accessible and honest.">
+  <meta property="twitter:image" content="https://wes4saltlake.com/assets/logo.png">
+
   <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
